--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -196,15 +196,15 @@ body {
   scale: 0;
 }
 
-#wrapper::after {
-  content: 'u can do it, AmeGod!';
+#pulsingText {
   position: absolute;
   top: 30%;
   left: 50%;
+  font-size: 8px;
   text-align: center;
   transform: translate(-50%, -50%);
   color: white;
-  width: 100px;
+  width: 80px;
 }
 
 #pulsingheart { 
